--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- ** Header ** -->
     <header>
         <div class="header-left">
-            <a class="home-container-link" href="index.html">
+            <a class="home-container-link" href="https://beginnersforbeginners.com/">
                     <div><img class="home-icon" src="icons/home.svg"></div>
                     <div class="home-text">Home</div>            
             </a>
