--- a/content/openfoam_installation.html
+++ b/content/openfoam_installation.html
@@ -168,7 +168,7 @@
                 <div class="code-text">wsl.exe --install Ubuntu-24.04</div>
                 <div class="sub-step-description">
                     This is how the installation will look like. 
-                    You may skip the video, it is 3 minutes long.
+                    You may skip the video, it is around 1 minute long.
                 </div>
                 <div class="step-image-container">
                     <video class="step-image" controls>
