--- a/content/openfoam_installation_resources/openfoam_installation.html
+++ b/content/openfoam_installation_resources/openfoam_installation.html
@@ -28,7 +28,7 @@
     <header>
         <div class="header-left">
             <a class="home-container" href="https://www.beginnersforbeginners.com" target="_blank">
-                <div><img class="home-icon" src="../icons/home.svg"></div>
+                <div><img class="home-icon" src="../../icons/home.svg"></div>
                 <div class="home-text">Home</div>            
             </a>
             <div class="menu">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="logo-container">
-            <img class="logo-icon" src="../icons/Full logo.png">            
+            <img class="logo-icon" src="../../icons/Full logo.png">            
         </div>
         
         <div class="header-right">
