--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="topic-title">Getting started with OpenFOAM</div>
     </div>
     </a>    
-    <a class="main-topic-container" href="content/tenUsefulCommands.html">
-        <div class="topic-title">10 useful commands in OpenFOAM (Linux)</div>
+    <a class="main-topic-container" href="content/useful_commands/useful_commands.html">
+        <div class="topic-title">Useful commands to run OpenFOAM (Linux)</div>
     </a>
 </div>
 
