--- a/content/useful_commands/useful_commands.html
+++ b/content/useful_commands/useful_commands.html
@@ -60,7 +60,7 @@
             <li>Navigating files</li>
             <li>Creating, moving, and removing files and folders</li>
             <li>Exercises</li>
-            <li>OpenFOAM aliases</li>
+            <!--<li>OpenFOAM aliases</li>-->
 
         </ol>
     </div>
