--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <html>
 <!-- ********** This is the head ********** -->
 <head>
+    <!-- Google adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6498610035685052"
+    crossorigin="anonymous"></script>
+
 <title>Beginners for Beginners</title>
 <!--Font sourcing-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
