Modified home icon

--- a/content/openfoam_installation_resources/openfoam_installation.html
+++ b/content/openfoam_installation_resources/openfoam_installation.html
@@ -27,7 +27,7 @@
     <!-- ** Header ** -->
     <header>
         <div class="header-left">
-            <a class="home-container" href="https://www.beginnersforbeginners.com" target="_blank">
+            <a class="home-container" href="https://www.beginnersforbeginners.com" target="_self">
                 <div><img class="home-icon" src="../../icons/home.svg"></div>
                 <div class="home-text">Home</div>            
             </a>
