--- a/content/useful_commands/useful_commands.html
+++ b/content/useful_commands/useful_commands.html
@@ -27,7 +27,7 @@
     <!-- ** Header ** -->
     <header>
         <div class="header-left">
-            <a class="home-container" href="https://www.beginnersforbeginners.com" target="_blank">
+            <a class="home-container" href="https://www.beginnersforbeginners.com" target="_self">
                 <div><img class="home-icon" src="../../icons/home.svg"></div>
                 <div class="home-text">Home</div>            
             </a>
