--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="topic-title">Getting started with OpenFOAM</div>
     </div>
     </a>    
-    <a class="main-topic-container" href="content/useful_commands/useful_commands.html">
+    <a class="main-topic-container" href="content/useful_commands/useful_commands.html" target="_blank">
         <div class="topic-title">Useful commands to run OpenFOAM (Linux)</div>
     </a>
 </div>
