--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <a class="main-topic-container" href="content/useful_commands/useful_commands.html" target="_blank">
         <div class="topic-title">Useful commands to run OpenFOAM (Linux)</div>
     </a>
+    <a class="main-topic-container" href="content/useful_commands/useful_commands.html" target="_blank">
+        <div class="topic-title">Configure Allrun and Allclean bash script</div>
+    </a>
 </div>
 
 <!-- ** Nav or sidebar ** -->
