--- a/content/AllrunAndAllclean/AllrunAndAllclean.html
+++ b/content/AllrunAndAllclean/AllrunAndAllclean.html
@@ -78,12 +78,13 @@
                 It is an instruction to the computer on how to run a case. 
                 (Basically, it is like a step-by-step IKEA manual on assembling a furniture. 
                 Here you are getting the steps that your computer need to carry out to run the simulation.)
-                
             </div>
 
             <div class="content-paragraph">
-                If you have downloaded OpenFOAM but could not find your OpenFOAM folder, try typing <i>"foam"</i> in the terminal and press "Enter"
+                Using the Allrun from the simpleFoam motorbike case tutorial (located in <i>$FOAM_TUTORIALS/incompressible/simpleFoam/motorBike</i>)
+                The Allrun script should look like the following (for OpenFOAM v2412):
             </div>
+            
 
             <div class="step-video-container">
                 <video class="step-video" preload="auto" autoplay muted loop src="image/foam_alias.mp4">
